# player-value-ml

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/decisions/: 001-honest-multimodel-comparison.md
results/eda/: summary.md
results/models/baselines/: metrics.json
results/models/classifier/: metrics.json
results/models/jax_tabtransformer/: metrics.json
results/models/lgbm/: feature_importance.csv  metrics.json
results/models/stats/: metrics.json
scripts/: compare_plots.py  eda.py  feature_audit.py  push_dataset.py  push_model.py  push_space.py  train_baselines.py  train_classifier.py  train_jax_tab.py  train_lgbm.py  train_neural.py  train_stats.py
space/: README.md  app.py  requirements.txt
src/playerval/: features.py  jax_tabtransformer.py  refdata.py  xg_proxies.py
tests/: test_pipeline.py
